menu visibility fixed, why the hell I used padding? Don't ask me, its working!

--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -5,7 +5,9 @@
     margin-left: 8%;
   }
   #menu {
-    z-index: 5;
+    padding-left: 0;
+    margin-left: 66%;
+    margin-top: 10px;
   }
   .home {
     max-width: 100vw;
